PROJECT(LIBZIP)
file(GLOB libzip_src ${CMAKE_CURRENT_SOURCE_DIR}/*.c ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../zlib-1.2.8)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
set(src ${libzip_src})
set_source_files_properties(${src} PROPERTIES LANGUAGE CXX )
ADD_LIBRARY(zip STATIC ${src})
